Fixed spacing between icon elements
- Add SCSS formatting using Prettier

--- a/assets/scss/hljs_custom.scss
+++ b/assets/scss/hljs_custom.scss
@@ -2,7 +2,8 @@
     display: block;
     overflow-x: auto;
     padding: 0.5em;
-    background: #1e1e1e; color: #ddd;
+    background: #1e1e1e;
+    color: #ddd;
 }
 
 .hljs-tag,
